# json-py-craft

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
docs/: README.md  build_scripts.md
docs/core/: README.md  errors.md  logger.md  singleton.md  types.md
docs/json/: README.md  base.md  io.md  list.md  map.md
docs/manager/: README.md  configuration.md
docs/puml/: README.md
docs/puml/core/: Singleton.puml
docs/puml/json/: JSONBaseTemplate.puml  JSONListTemplate.puml  JSONMapTemplate.puml
docs/puml/manager/: ConfigurationManager.puml
jsonpycraft/: __init__.py
jsonpycraft/core/: __init__.py  errors.py  logger.py  singleton.py  types.py
jsonpycraft/json/: __init__.py  base.py  io.py  list.py  map.py
jsonpycraft/manager/: __init__.py  configuration.py
sh/: build.sh  test_build.sh
tests/: __init__.py
tests/json/: __init__.py  test_base.py  test_io.py  test_list.py  test_map.py
tests/manager/: __init__.py  test_configuration.py
