[tool.poetry]
name = "jsonpycraft"
version = "0.1.4"
description = "JsonPyCraft is a specialized Python toolkit designed for efficient and structured JSON management."
authors = ["Austin Berrio <aberrio@teleprint.me>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
bpython = "^0.24"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
build = "^1.0.3"
mkdocs = "^1.6.1"
mkdocstrings = {version = "^0.26.2", extras = ["python"]}
mkdocs-material = "^9.5.42"

[tool.poetry.urls]
"Documentation" = "https://github.com/teleprint-me/json-py-craft/tree/main/docs"
"Source" = "https://github.com/teleprint-me/json-py-craft"

[tool.build]
packages = [
  { include = "jsonpycraft" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
