[tool.poetry]
name = "jsonpycraft"
version = "0.1.8"
description = "JsonPyCraft is a specialized Python toolkit designed for efficient and structured JSON management."
authors = ["Austin Berrio <aberrio@teleprint.me>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
bpython = ">=0.25,<0.27"
black = "^25.1.0"
isort = ">=6.0.1,<8.0.0"
flake8 = "^7.2.0"
pytest = ">=8.3.5,<10.0.0"
build = "^1.2.2.post1"
mkdocs = "^1.6.1"
mkdocstrings = {version = ">=0.29.1,<1.1.0", extras = ["python"]}
mkdocs-material = "^9.6.14"

[tool.poetry.urls]
"Documentation" = "https://github.com/teleprint-me/json-py-craft/tree/main/docs"
"Source" = "https://github.com/teleprint-me/json-py-craft"

[tool.build]
packages = [
  { include = "jsonpycraft" }
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
